Added options for ES & logstash log retention policy

--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
@@ -27,14 +27,24 @@ appender.rolling.type = RollingFile
 appender.rolling.name = rolling
 appender.rolling.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}.log
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] %marker%.-10000m%n
-appender.rolling.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}-%d{yyyy-MM-dd}.log
+appender.rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] [%node_name]%marker %.-10000m%n
+appender.rolling.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}-%d{yyyy-MM-dd}-%i.log.gz
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.rolling.policies.time.interval = 1
 appender.rolling.policies.time.modulate = true
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size = {{ composant.log_appenders.rolling.max_log_file_size }}
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.fileIndex = nomax
+appender.rolling.strategy.action.type = Delete
+appender.rolling.strategy.action.basepath = ${sys:es.logs.base_path}
+appender.rolling.strategy.action.condition.type = IfFileName
+appender.rolling.strategy.action.condition.glob = ${sys:es.logs.cluster_name}-*
+appender.rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.rolling.strategy.action.condition.nested_condition.exceeds = {{ composant.log_appenders.rolling.max_total_log_size }}
 
-rootLogger.level = info
+rootLogger.level = {{ composant.log_appenders.root.log_level }}
 rootLogger.appenderRef.console.ref = console
 rootLogger.appenderRef.rolling.ref = rolling
 rootLogger.appenderRef.syslog.ref = syslog
@@ -43,16 +53,25 @@ appender.deprecation_rolling.type = RollingFile
 appender.deprecation_rolling.name = deprecation_rolling
 appender.deprecation_rolling.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_deprecation.log
 appender.deprecation_rolling.layout.type = PatternLayout
-appender.deprecation_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] %marker%.-10000m%n
+appender.deprecation_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] [%node_name]%marker %.-10000m%n
 appender.deprecation_rolling.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_deprecation-%i.log.gz
 appender.deprecation_rolling.policies.type = Policies
+appender.deprecation_rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.deprecation_rolling.policies.time.interval = 1
+appender.deprecation_rolling.policies.time.modulate = true
 appender.deprecation_rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.deprecation_rolling.policies.size.size = 1GB
+appender.deprecation_rolling.policies.size.size = {{ composant.log_appenders.deprecation_rolling.max_log_file_size }}
 appender.deprecation_rolling.strategy.type = DefaultRolloverStrategy
-appender.deprecation_rolling.strategy.max = 4
+appender.deprecation_rolling.strategy.fileIndex = nomax
+appender.deprecation_rolling.strategy.action.type = Delete
+appender.deprecation_rolling.strategy.action.basepath = ${sys:es.logs.base_path}
+appender.deprecation_rolling.strategy.action.condition.type = IfFileName
+appender.deprecation_rolling.strategy.action.condition.glob = ${sys:es.logs.cluster_name}-*
+appender.deprecation_rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.deprecation_rolling.strategy.action.condition.nested_condition.exceeds = {{ composant.log_appenders.deprecation_rolling.max_total_log_size }}
 
 logger.deprecation.name = org.elasticsearch.deprecation
-logger.deprecation.level = warn
+logger.deprecation.level = {{ composant.log_appenders.deprecation_rolling.log_level }}
 logger.deprecation.appenderRef.deprecation_rolling.ref = deprecation_rolling
 logger.deprecation.additivity = false
 
@@ -60,15 +79,25 @@ appender.index_search_slowlog_rolling.type = RollingFile
 appender.index_search_slowlog_rolling.name = index_search_slowlog_rolling
 appender.index_search_slowlog_rolling.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_index_search_slowlog.log
 appender.index_search_slowlog_rolling.layout.type = PatternLayout
-appender.index_search_slowlog_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c] %marker%.-10000m%n
+appender.index_search_slowlog_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] [%node_name]%marker %.-10000m%n
 appender.index_search_slowlog_rolling.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_index_search_slowlog-%d{yyyy-MM-dd}.log
 appender.index_search_slowlog_rolling.policies.type = Policies
 appender.index_search_slowlog_rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.index_search_slowlog_rolling.policies.time.interval = 1
 appender.index_search_slowlog_rolling.policies.time.modulate = true
+appender.index_search_slowlog_rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.index_search_slowlog_rolling.policies.size.size = {{ composant.log_appenders.index_search_slowlog_rolling.max_log_file_size }}
+appender.index_search_slowlog_rolling.strategy.type = DefaultRolloverStrategy
+appender.index_search_slowlog_rolling.strategy.fileIndex = nomax
+appender.index_search_slowlog_rolling.strategy.action.type = Delete
+appender.index_search_slowlog_rolling.strategy.action.basepath = ${sys:es.logs.base_path}
+appender.index_search_slowlog_rolling.strategy.action.condition.type = IfFileName
+appender.index_search_slowlog_rolling.strategy.action.condition.glob = ${sys:es.logs.cluster_name}-*
+appender.index_search_slowlog_rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.index_search_slowlog_rolling.strategy.action.condition.nested_condition.exceeds = {{ composant.log_appenders.index_search_slowlog_rolling.max_total_log_size }}
 
 logger.index_search_slowlog_rolling.name = index.search.slowlog
-logger.index_search_slowlog_rolling.level = {{ composant.index_search_slowlog_rolling_level }}
+logger.index_search_slowlog_rolling.level = {{ composant.log_appenders.index_search_slowlog_rolling.log_level }}
 logger.index_search_slowlog_rolling.appenderRef.index_search_slowlog_rolling.ref = index_search_slowlog_rolling
 logger.index_search_slowlog_rolling.additivity = false
 
@@ -76,14 +105,24 @@ appender.index_indexing_slowlog_rolling.type = RollingFile
 appender.index_indexing_slowlog_rolling.name = index_indexing_slowlog_rolling
 appender.index_indexing_slowlog_rolling.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_index_indexing_slowlog.log
 appender.index_indexing_slowlog_rolling.layout.type = PatternLayout
-appender.index_indexing_slowlog_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c] %marker%.-10000m%n
+appender.index_indexing_slowlog_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] [%node_name]%marker %.-10000m%n
 appender.index_indexing_slowlog_rolling.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}_index_indexing_slowlog-%d{yyyy-MM-dd}.log
 appender.index_indexing_slowlog_rolling.policies.type = Policies
 appender.index_indexing_slowlog_rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.index_indexing_slowlog_rolling.policies.time.interval = 1
 appender.index_indexing_slowlog_rolling.policies.time.modulate = true
+appender.index_indexing_slowlog_rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.index_indexing_slowlog_rolling.policies.size.size = {{ composant.log_appenders.index_indexing_slowlog_rolling.max_log_file_size }}
+appender.index_indexing_slowlog_rolling.strategy.type = DefaultRolloverStrategy
+appender.index_indexing_slowlog_rolling.strategy.fileIndex = nomax
+appender.index_indexing_slowlog_rolling.strategy.action.type = Delete
+appender.index_indexing_slowlog_rolling.strategy.action.basepath = ${sys:es.logs.base_path}
+appender.index_indexing_slowlog_rolling.strategy.action.condition.type = IfFileName
+appender.index_indexing_slowlog_rolling.strategy.action.condition.glob = ${sys:es.logs.cluster_name}-*
+appender.index_indexing_slowlog_rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.index_indexing_slowlog_rolling.strategy.action.condition.nested_condition.exceeds = {{ composant.log_appenders.index_indexing_slowlog_rolling.max_total_log_size }}
 
 logger.index_indexing_slowlog.name = index.indexing.slowlog.index
-logger.index_indexing_slowlog.level = {{ composant.index_indexing_slowlog_level }}
+logger.index_indexing_slowlog.level = {{ composant.log_appenders.index_indexing_slowlog_rolling.log_level }}
 logger.index_indexing_slowlog.appenderRef.index_indexing_slowlog_rolling.ref = index_indexing_slowlog_rolling
 logger.index_indexing_slowlog.additivity = false
