--- a/deployment/ansible-vitam/roles/logstash/templates/log4j2.properties.j2
+++ b/deployment/ansible-vitam/roles/logstash/templates/log4j2.properties.j2
@@ -4,25 +4,45 @@ name = LogstashPropertiesConfig
 appender.rolling.type = RollingFile
 appender.rolling.name = plain_rolling
 appender.rolling.fileName = ${sys:ls.logs}/logstash-${sys:ls.log.format}.log
-appender.rolling.filePattern = ${sys:ls.logs}/logstash-${sys:ls.log.format}-%d{yyyy-MM-dd}.log
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c] %-.10000m%n
+appender.rolling.filePattern = ${sys:ls.logs}/logstash-${sys:ls.log.format}-%d{yyyy-MM-dd}-%i.log
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.rolling.policies.time.interval = 1
 appender.rolling.policies.time.modulate = true
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c] %-.10000m%n
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size = {{ logstash.log_appenders.rolling.max_log_file_size }}
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.fileIndex = nomax
+appender.rolling.strategy.action.type = Delete
+appender.rolling.strategy.action.basepath = ${sys:ls.logs}
+appender.rolling.strategy.action.condition.type = IfFileName
+appender.rolling.strategy.action.condition.glob = logstash-${sys:ls.log.format}-*
+appender.rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.rolling.strategy.action.condition.nested_condition.exceeds = {{ logstash.log_appenders.rolling.max_total_log_size }}
 
 appender.json_rolling.type = RollingFile
 appender.json_rolling.name = json_rolling
 appender.json_rolling.fileName = ${sys:ls.logs}/logstash-${sys:ls.log.format}.log
-appender.json_rolling.filePattern = ${sys:ls.logs}/logstash-${sys:ls.log.format}-%d{yyyy-MM-dd}.log
+appender.json_rolling.layout.type = PatternLayout
+appender.json_rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c] %-.10000m%n
+appender.json_rolling.filePattern = ${sys:ls.logs}/logstash-${sys:ls.log.format}-%d{yyyy-MM-dd}-%i.log
 appender.json_rolling.policies.type = Policies
 appender.json_rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.json_rolling.policies.time.interval = 1
 appender.json_rolling.policies.time.modulate = true
-appender.json_rolling.layout.type = JSONLayout
-appender.json_rolling.layout.compact = true
-appender.json_rolling.layout.eventEol = true
+appender.json_rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.json_rolling.policies.size.size = {{ logstash.log_appenders.json_rolling.max_log_file_size }}
+appender.json_rolling.strategy.type = DefaultRolloverStrategy
+appender.json_rolling.strategy.fileIndex = nomax
+appender.json_rolling.strategy.action.type = Delete
+appender.json_rolling.strategy.action.basepath = ${sys:ls.logs}
+appender.json_rolling.strategy.action.condition.type = IfFileName
+appender.json_rolling.strategy.action.condition.glob = logstash-${sys:ls.log.format}-*
+appender.json_rolling.strategy.action.condition.nested_condition.type = IfAccumulatedFileSize
+appender.json_rolling.strategy.action.condition.nested_condition.exceeds = {{ logstash.log_appenders.json_rolling.max_total_log_size }}
 
 rootLogger.level = ${sys:ls.log.level}
 rootLogger.appenderRef.rolling.ref = ${sys:ls.log.format}_rolling
+
