Item #5833 : Update ansible deployment for multiple strategies

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
@@ -7,4 +7,18 @@
             {% endfor %}
         ]
     }
+    {% if other_strategies is defined %}
+    {% for strategy_name, strategy_offers in other_strategies.iteritems() %}
+    ,
+    {
+        "id" : "{{ strategy_name }}",
+        "offers" : [
+            {% for strategy_offer in strategy_offers %}
+            {"id" : "{{ strategy_offer.name }}.service.{{ strategy_offer.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}"{% if strategy_offer.status is defined %}, "status" :  "{{ strategy_offer.status| upper }}" {% endif %}}{% if not loop.last %},{% endif %}
+            {% endfor %}
+        ]
+    }
+    {% endfor %}
+    {% endif %}
+
 ]
