--- a/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
+++ b/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
@@ -182,33 +182,28 @@
 			</a>
 			<div class="panel-body">
 				{% for item in groups['vitam'] %}
-				<p class="row" style="vertical-align: middle"><div class="col-md-3">{{ item }}</div>
-				<div class="col-md-2">
-					{% for groupe in groups %}
-						{% if item in groups[groupe] %}
-							{% if (groupe not in ('hosts','all','vitam','reverse','elasticsearch','mongo_common')) and (not(groupe|search('^zone'))) %}
-								{{ groupe|regex_replace('hosts-', '') }}<br/>
-							{% endif %}
-						{% endif %}
-					{% endfor %}
-
-				</div>
-
-
-				<div class="col-md-2">
-
-					{% for groupe in groups %}
-						{% if groupe |search('^zone') %}
-							{% if item in groups[groupe] %}{{ groupe }}<br/>{% endif %}
-						{% endif %}
-					{% endfor %}
-
-				</div>
-
-
-				<div class="col-md-2">
-					<a href="/nodes/{{ item }}/browse" class="btn btn-primary btn-xs" target="_blank">/vitam browser</a>
-				</div></p>
+                    <div class="row" style="border-style: solid; border-width: 1px; margin-bottom: 1px; border-color: rgb(221, 221, 221); padding: 5px 0px 2px 0px;">
+                        <div class="col-md-3">{{ item }}</div>
+                        <div class="col-md-2">
+                            {% for groupe in groups %}
+                                {% if item in groups[groupe] %}
+                                    {% if (groupe not in ('hosts','all','vitam','reverse','elasticsearch','mongo_common')) and (not(groupe|search('^zone'))) %}
+                                        {{ groupe|regex_replace('hosts-', '') }}<br/>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="col-md-2">
+                            {% for groupe in groups %}
+                                {% if groupe |search('^zone') %}
+                                    {% if item in groups[groupe] %}{{ groupe }}<br/>{% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="col-md-2">
+                            <a href="/nodes/{{ item }}/browse" class="btn btn-primary btn-xs" target="_blank">/vitam browser</a>
+                        </div>
+                    </div>
 				{% endfor %}
 			</div>
 		</div>
