5897 - Add more tweaks in order to have a better visualization.

--- a/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
+++ b/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
@@ -182,7 +182,7 @@
 			</a>
 			<div class="panel-body">
 				{% for item in groups['vitam'] %}
-                    <div class="row" style="border-style: solid; border-width: 1px; margin-bottom: 1px; border-color: rgb(221, 221, 221); padding: 5px 0px 2px 0px;">
+                    <div class="row component-line">
                         <div class="col-md-3">{{ item }}</div>
                         <div class="col-md-2">
                             {% for groupe in groups %}
