--- a/deployment/ansible-vitam-extra/roles/reverse/files/css/styles.css
+++ b/deployment/ansible-vitam-extra/roles/reverse/files/css/styles.css
@@ -491,4 +491,16 @@ table {
   color: white;
 }
 
+.component-line {
+  border-style: solid;
+  border-width: 2px;
+  margin-bottom: 5px;
+  border-color: rgb(221, 221, 221);
+  padding: 5px 0 2px 0;
+}
+
+.component-line:hover {
+  background-color: aliceblue;
+}
+
 /* STORY 87 */
