Now it is possible to apply different Consul check frequencies on various parts of VITAM

--- a/deployment/ansible-vitam/roles/cerebro/templates/service-componentid.json.j2
+++ b/deployment/ansible-vitam/roles/cerebro/templates/service-componentid.json.j2
@@ -10,7 +10,7 @@
         "name": "cerebro : HTTP check",
         "notes": "HTTP status check",
         "http": "http://{{ ip_admin }}:{{ cerebro.port }}/{{ cerebro.baseuri }}/",
-        "interval": "1s"
+        "interval": "{{ cerebro.check_consul }}s"
       }
     ]
   }
