--- a/deployment/ansible-vitam/roles/logstash/templates/service-logstash.json.j2
+++ b/deployment/ansible-vitam/roles/logstash/templates/service-logstash.json.j2
@@ -9,7 +9,7 @@
       {
         "notes": "Syslog tcp port opened",
         "tcp": "{{ ip_admin }}:{{ logstash.port }}",
-        "interval": "1s"
+        "interval": "{{ logstash.check_consul }}s"
       }
     ]
   }
