--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
@@ -2,7 +2,7 @@ status = error
 
 # log action execution errors for easier debugging
 logger.action.name = org.elasticsearch.action
-logger.action.level = debug
+logger.action.level = {{ composant.action_log_level }}
 
 appender.console.type = Console
 appender.console.name = console
