--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -35,3 +35,5 @@ classificationLevel :
   authorizeNotDefined: {{classificationLevelOptional}}
 
 environmentName: {{ vitam_prefix_offer|default(vitam_site_name) }}
+
+acceptableRequestTime: {{ vitam_struct.vitam_component.acceptableRequestTime|default(10) }}
