Disable update checks for consul.
To avoid the following error during execution of vitam-consul service:
==> Failed to check for updates: Get https://checkpoint-api.hashicorp.com...

--- a/deployment/ansible-vitam/roles/consul/templates/consul.json.j2
+++ b/deployment/ansible-vitam/roles/consul/templates/consul.json.j2
@@ -33,6 +33,7 @@
   "retry_interval": "{{ consul.retry_interval }}s",
   "enable_syslog": true,
   "disable_remote_exec": true,
+  "disable_update_check": true,
   "encrypt": "{{ consul_encrypt }}",
   "ports": {
     "dns" : {{ consul.dns_port }}
