--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -34,6 +34,9 @@ classificationLevel :
   allowList :  [{% for classification in classificationList %}{{ classification }}{% if not loop.last %},{% endif %}{% endfor %}]
   authorizeNotDefined: {{classificationLevelOptional}}
 
+indexInheritedRulesWithAPIV2OutputByTenant: [ "{{  vitam.worker.api_output_index_tenants | join('", "') }}" ]
+indexInheritedRulesWithRulesIdByTenant: [ "{{  vitam.worker.rules_index_tenants | join('", "') }}" ]
+
 environmentName: {{ vitam_prefix_offer|default(vitam_site_name) }}
 
 acceptableRequestTime: {{ vitam_struct.vitam_component.acceptableRequestTime|default(10) }}
