--- a/deployment/ansible-vitam-extra/roles/reverse/files/css/styles.css
+++ b/deployment/ansible-vitam-extra/roles/reverse/files/css/styles.css
@@ -493,13 +493,20 @@ table {
 
 .component-line {
   border-style: solid;
-  border-width: 2px;
+  border-width: 0;
   margin-bottom: 5px;
-  border-color: rgb(221, 221, 221);
   padding: 5px 0 2px 0;
 }
 
+.component-line:nth-child(2n) {
+  background-color: rgba(186, 186, 186, 0.28);
+}
+
 .component-line:hover {
+  background-color: aliceblue;
+}
+
+.component-line:nth-child(2n):hover {
   background-color: aliceblue;
 }
 
