--- a/deployment/ansible-vitam/roles/vitam/templates/service-componentid.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/service-componentid.json.j2
@@ -28,7 +28,7 @@
         "name": "{{ vitam_struct.vitam_component }} : admin service check",
         "notes": "Status admin : /admin/v1/status",
         "http": "http://{{ ip_admin }}:{{ vitam_struct.port_admin }}/admin/v1/status",
-        "interval": "1s"
+        "interval": "{{ vitam_struct.consul_admin_check }}s"
       }
       {% if (vitam_struct.https_enabled != true) and (vitam_struct.vitam_component != vitam.elastickibanainterceptor.vitam_component)  and (vitam_struct.vitam_component != vitam.security_internal.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_demo.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_recette.vitam_component) and (vitam_struct.vitam_component != vitam.library.vitam_component) %}
       ,{
