Item 5956: drop old index

--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-logbook-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-logbook-database.js.j2
@@ -26,3 +26,5 @@ db.LogbookLifeCycleUnit.dropIndex( { "_tenant" : 1 , "obId" : 1 } )
 db.LogbookLifeCycleObjectGroup.dropIndex( { "_tenant" : 1 , "obId" : 1 } )
 db.LogbookLifeCycleUnit.dropIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
 db.LogbookLifeCycleObjectGroup.dropIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
+db.LogbookLifeCycleUnit.dropIndex( { "_lastPersistedDate": 1, "_tenant": 1 })
+db.LogbookLifeCycleObjectGroup.dropIndex( { "_lastPersistedDate": 1, "_tenant": 1 })
