Add archive output retention policy

--- a/deployment/ansible-vitam/roles/vitam/templates/offer/default-storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/offer/default-storage.conf.j2
@@ -47,6 +47,7 @@ tapeLibraryConfiguration:
   maxTarFileSize: {{ vitam_offers[offer_conf]["tapeLibraryConfiguration"]["maxTarFileSize"] | default(1000000) }}
   useSudo: {{ vitam_offers[offer_conf]["tapeLibraryConfiguration"]["useSudo"] | default('false') }}
   forceOverrideNonEmptyCartridges: {{ vitam_offers[offer_conf]["tapeLibraryConfiguration"]["forceOverrideNonEmptyCartridges"] | default('false') }}
+  archiveRetentionCacheTimeoutInMinutes: {{ vitam_offers[offer_conf]["tapeLibraryConfiguration"]["archiveRetentionCacheTimeoutInMinutes"] | default(30) }}
 
   topology:
     buckets:
