adding archive unit profile purge button

--- a/sources/ihm-recette/ihm-recette-web-front/src/app/admin/collection/collection.component.html
+++ b/sources/ihm-recette/ihm-recette-web-front/src/app/admin/collection/collection.component.html
@@ -18,6 +18,8 @@
                           name="registres des fonds" label="Purge du registre des fonds"></vitam-remove-items>
       <vitam-remove-items class="ui-g-12 ui-md-6 ui-lg-4" [tenant]="tenant" api="masterdata/profile"
                           name="profils" label="Purge du Référentiel des profils d'archivage"></vitam-remove-items>
+      <vitam-remove-items class="ui-g-12 ui-md-6 ui-lg-4" [tenant]="tenant" api="masterdata/archiveUnitProfile"
+                          name="profils d'unités archivistique" label="Purge du Référentiel des profils d'unités archivistique (AUP)"></vitam-remove-items>
       <vitam-remove-items class="ui-g-12 ui-md-6 ui-lg-4" [tenant]="tenant" api="masterdata/agencies"
                           name="services agents" label="Purge du Référentiel des services agents"></vitam-remove-items>
       <vitam-remove-items class="ui-g-12 ui-md-6 ui-lg-4" [tenant]="tenant" api="masterdata/archiveUnitProfile"
