Should fix a ADAMANT problem (added optional param id in vitam_strategy)

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/static-offer.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/static-offer.json.j2
@@ -6,7 +6,11 @@
 [
 {% for item in vitam_strategy %}
 {
+{% if item.id is defined %}
+    "id" : "{{ item.id }}",
+{% else %}
     "id" : "{{ item.name }}.service.{{ item.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}",
+{% endif %}
     "baseUrl" : "{{ protocol }}://{{ item.name }}.service.{{ item.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}:{{ vitam.storageofferdefault.port_service }}",
     "parameters" : {
         {% if vitam.storageofferdefault.https_enabled==true %}
