5941 - Make RetryRunnable configurable.

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
@@ -12,7 +12,9 @@ maxBatchThreadPoolSize: {{vitam.storageengine.maxBatchThreadPoolSize}}
 batchDigestComputationTimeout: {{vitam.storageengine.batchDigestComputationTimeout}}
 offerSynchronizationBulkSize: {{vitam.storageengine.offerSynchronizationBulkSize}}
 offerSyncThreadPoolSize: {{vitam.storageengine.offerSyncThreadPoolSize}}
-
+offerSyncNumberOfRetries: {{vitam.storageengine.offerSyncNumberOfRetries}}
+offerSyncFirstAttemptWaitingTime: {{vitam.storageengine.offerSyncFirstAttemptWaitingTime}}
+offerSyncWaitingTime: {{vitam.storageengine.offerSyncWaitingTime}}
 #Basic Authentication
 adminBasicAuth:
 - userName: {{ admin_basic_auth_user }}
