Add missing permission for downloading report.

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -106,4 +106,5 @@ permissionsWithoutPersonalCertificate:
   - 'preservationScenarios:read'
   - 'preservationScenario:read'
   - 'preservation:update'
+  - 'batchreport:id:read'
   - 'preservationreport:id:read'
